--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,6 @@ Date: 2014-06-15
 Author: Sean Davis
 Maintainer: Sean Davis <sdavis2@mail.nih.gov>
 Description: This package uses basic R/Bioconductor infrastructure and functionality to perform quality control, preprocessing, exploratory data analysis, and differential expression on a set of 10 samples.  It is based on publicly available one-color oligonucleotide expression data from ten samples, two each from five different normal tissues. The task is to follow the vignette and identify the five unknown tissues.
+Depends: knitr, oligo, pheatmap
 License: MIT
+VignetteBuilder: knitr
